--- a/src/main/resources/fonts/README
+++ b/src/main/resources/fonts/README
@@ -1,3 +1,3 @@
-This directory includes the OFL-1.1 licensed Noto Serif TTF fonts, available from:
+This directory includes the OFL-1.1 licensed Noto Sans and Noto Serif TTF fonts, available from:
 
 https://www.google.com/get/noto/
